# scraper-website-project

./: README.md  pyproject.toml  scrapy.cfg
cls_scraper_project.egg-info/: PKG-INFO
scraper_project.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vendor_scraper/: items.py  pipelines.py  settings.py
vendor_scraper/configs/: DOM_site.json  list_user_agents.txt  urls_pool.csv
vendor_scraper/dataflow/load/: add_url_to_pool.py  load_metadata_to_db.py
vendor_scraper/dataflow/process/: download_img.py
vendor_scraper/middlewares/: base.py  browser_headers_middleware.py  proxy_middleware.py  user_agent_middleware.py
vendor_scraper/spiders/: distributed-worker.py  playwright_worker.py
